--- a/app/src/main/res/layout/item_theme_list_max.xml
+++ b/app/src/main/res/layout/item_theme_list_max.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:id="@+id/iv_thema_background"
+                android:id="@+id/iv_theme_background"
                 android:background="#00000000"/>
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
@@ -46,11 +46,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
-            android:id="@+id/btn_thema_item"/>
+            android:id="@+id/btn_theme_item"/>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:id="@+id/rl_thema_item"
+            android:id="@+id/rl_theme_item"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -78,6 +78,7 @@
                         android:textColor="#9B9B9B"
                         android:text="100"
                         android:gravity="center_vertical"
+                        android:id="@+id/tv_theme_item_percent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -115,7 +116,7 @@
                     android:focusable="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_thema_title"/>
+                    android:id="@+id/tv_theme_title"/>
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -130,7 +131,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_thema_versus_max"/>
+                        android:id="@+id/tv_theme_versus_max"/>
 
                     <kr.puzi.puzi.ui.customview.NotoTextView
                         app:fontWeight="regular"
@@ -140,7 +141,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_thema_versus"/>
+                        android:id="@+id/tv_theme_versus"/>
 
                     <kr.puzi.puzi.ui.customview.NotoTextView
                         app:fontWeight="regular"
@@ -150,7 +151,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_thema_versus_min"/>
+                        android:id="@+id/tv_theme_versus_min"/>
 
                 </LinearLayout>
 
@@ -172,6 +173,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:id="@+id/tv_theme_item_count"
                     android:text="2000"
                     android:textColor="#9B9B9B"
                     android:textSize="16dp"
