--- a/app/src/main/res/layout/item_theme_list_average.xml
+++ b/app/src/main/res/layout/item_theme_list_average.xml
@@ -77,6 +77,7 @@
                         android:textSize="16dp"
                         android:textColor="#9B9B9B"
                         android:text="50"
+                        android:id="@+id/tv_theme_item_percent"
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -172,6 +173,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:id="@+id/tv_theme_item_count"
                     android:text="2000"
                     android:textColor="#9B9B9B"
                     android:textSize="16dp"
