--- a/app/src/main/res/layout/fragment_theme.xml
+++ b/app/src/main/res/layout/fragment_theme.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
-            android:scrollbars="none"
-            android:fillViewport="true">
+            android:scrollbars="none">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -209,20 +208,13 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:overScrollMode="never"
-                        android:id="@+id/lv_theme"
-                        android:background="@color/colorWhite"
-                        android:divider="@color/colorWhite"/>
-
-                </LinearLayout>
+                <ListView
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:overScrollMode="never"
+                  android:id="@+id/lv_theme"
+                  android:background="@color/colorWhite"
+                  android:divider="@color/colorWhite"/>
 
             </LinearLayout>
 
