--- a/app/src/main/res/layout/item_theme_list_min.xml
+++ b/app/src/main/res/layout/item_theme_list_min.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
+    android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -41,12 +42,6 @@
                 android:background="#00000000"/>
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:id="@+id/btn_theme_item"/>
 
         <LinearLayout
             android:orientation="horizontal"
