--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -36,11 +36,13 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_marginTop="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
 
       <FrameLayout
+          android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
